Complete technical documentation with hybrid approach - Added Parts IV-IX with comprehensive coverage - Applied hybrid approach: code snippets for critical logic, descriptive text for basic operations - Updated configuration properties and database settings - Enhanced troubleshooting guide with practical examples